# neuromaps-mouse

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.rst  citing.rst  pyproject.toml
.github/ISSUE_TEMPLATE/: brain-map-request.yml  bug-report.yml  feature-request.yml
.github/workflows/: docs.yml
docs/: api.rst  citing.rst  conf.py  contributing.rst  index.rst  installation.rst  listofmaps.rst  usage.rst
docs/_static/: theme_overrides.css
docs/user_guide/: atlases.rst
mousemaps/: _version.py  images.py  plotting.py  resampling.py  stats.py  transforms.py
mousemaps/datasets/: __init__.py  allen_gene.py  annotations.py  atlases.py  utils.py
mousemaps/datasets/data/: annotations-meta.json  annotations.json
neuromaps_mouse/: _version.py  images.py  plotting.py  resampling.py  transforms.py
neuromaps_mouse/datasets/: annotations.py  atlases.py  utils.py
neuromaps_mouse/datasets/data/: annotations-meta.json  annotations.json  atlases.json
